# Wiki

./: .gitattributes  .gitignore  3D-shapes.md  Adding-audio-to-your-project.md  Adding-the-DirectX-Tool-Kit-for-Audio.md  Adding-the-DirectX-Tool-Kit.md  AlphaTestEffect.md  AnimatedTexture.h  AnimatedTexture.md  Animating-using-model-bones.md  Applying-lightmaps.md  Audio.md  AudioEmitter.md  AudioEngine.md  AudioListener.md  Authoring-an-Effect.md  Basic-game-math.md  BasicEffect.md  BasicPostProcess.md  BufferHelpers.md  Collision-detection.md  Color.md  ComPtr.md  CommonStates.md  ControllerFont.h  ControllerFont.md  Creating-and-playing-sounds.md  Creating-custom-shaders-with-DGSL.md  DDSTextureLoader.md  DGSLEffect.md  DebugDraw.cpp  DebugDraw.h  DebugDraw.md  DebugEffect.md  DeviceResources.md  DirectXHelpers.md  DirectXTK.md  Drawing-text.md  DualPostProcess.md  DualTextureEffect.md  (+98 more)
shaders/: SkyboxEffect_VS.hlsl
srctest/: CMakeLists.txt  CMakePresets.json  pch.h  wikitest.cpp
